--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
     -->
      
 </head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JTJRR37FBW"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-JTJRR37FBW');
+</script>
 <body>
 
     <header>
